# openalgo

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  .sample.env  .secrets.baseline  BACKTEST_R31_V9_EXPANDED_REPORT_2026-06-08.md  BACKTEST_R32_MEAN_REVERSION_REPORT_2026-06-08.md  BACKTEST_R33_INDEX_PAIRS_OPTIONS_REPORT_2026-06-08.md  BACKTEST_R34_PORTFOLIO_BLEND_REPORT_2026-06-08.md  BACKTEST_R36_REAL_MONTHLY_INDEX_OPTIONS_REPORT_2026-06-08.md  BACKTEST_R37_PREMIUM_SELLING_REPORT_2026-06-09.md  CLAUDE.md  COWORK_OBJECTIVE.md  Dockerfile  Makefile  app.py  conftest.py  docker-compose.test.yml  docker-compose.yaml  pyproject.toml  start.sh
.github/: PULL_REQUEST_TEMPLATE.md  test-baselines.json
.semgrep/: silent-drops.yml
audit/: README.md  silent_drop_audit_2026-06-11.md
backtest/: __init__.py  results_2026-05-14.json  results_2026-05-15.json  results_2026-05-16.json  results_2026-05-19.json  results_2026-05-20b.json  results_2026-05-21.json  run_backtest.py
blueprints/: admin.py  auth.py  backtest.py  brlogin.py  broker_credentials.py  chartink.py  flow.py  futures_follow.py  gc_json.py  health.py  journal.py  latency.py  log.py  mcp_http.py  mcp_oauth.py  mode_status.py  orders.py  pnltracker.py  preflight.py  python_strategy.py  react_app.py  sandbox.py  scanner_api.py  sector_follow.py  security.py  strategies_dashboard_api.py  strategy.py  system_permissions.py  tv_json.py  websocket_example.py  whatsapp.py
bridge/: __init__.py  requirements.txt  server.py  start.bat  start_openalgo.bat  test_review_signal.py
database/: auth_db.py  backtest_db.py  daily_intent_db.py  data_health_db.py  flow_db.py  futures_follow_db.py  health_db.py  historify_db.py  journal_reflection_db.py  latency_db.py  market_calendar_db.py  market_intel_db.py  master_contract_cache_hook.py  master_contract_status_db.py  oauth_db.py  scan_cycle_db.py  scanner_comparison_db.py  scanner_db.py  sector_follow_db.py  settings_db.py  signal_decision_db.py  strategy_daily_intent_db.py  strategy_llm_config_db.py  strategy_mode_audit_db.py  strategy_mode_db.py  strategy_portfolio_db.py  strategy_runtime_override_db.py  telegram_db.py  token_db_enhanced.py  trade_journal_db.py  traffic_db.py  user_db.py  whatsapp_db.py
docs/: BRANCHING_AND_CI.md  COWORK_SESSION_LEARNINGS.md  DEPLOYMENT_TESTING.md  DUCKDB_LOCK_ANALYSIS_3RD_ATTEMPT.md  DUCKDB_LOCK_CONTENTION_FIX_PLAN.md  PARAMETER_LOG.md  SIMPLIFIED_ENGINE_HANDOFF.md  SYSTEM_MAP.md  TASK_CAPABILITIES.md  UPSTREAM_SYNC_PROCEDURE.md
frontend/: package-lock.json  package.json  playwright.broker.config.ts  playwright.smoke.config.ts  vite.config.ts
install/: docker-run.bat  docker-run.sh
mcp/: mcpserver.py
outputs/: 2026-06-11_migration_audit.md  2026-06-11_upstream_e2e_test_audit.md  chartink_rule_validation_2026-06-04.md  chartink_vs_rule_comparison_2026-06-04.md
overnight_synthesis_2026-06-10/: MORNING_MESSAGE_2026-06-10.md  SYNTHESIS_2026-06-10.md
restx_api/: basket_order.py  cancel_all_order.py  cancel_order.py  close_position.py  modify_order.py  place_smart_order.py  split_order.py  telegram_bot.py  ticker.py  whatsapp_bot.py
sandbox/: catch_up_processor.py  execution_engine.py  holdings_manager.py  position_manager.py
scripts/: bench_greeks_baseline.py  bench_greeks_post_retry.py  bench_greeks_postmigration.py  bench_greeks_retry_failed.py  bench_parity_opengreeks.py  compare_chartink_vs_rule.py  docker_smoke.ps1  docker_smoke.sh  extract_broker_token.py  install-runner.ps1  migrate_strategy_daily_intent_to_strategy_mode.py  migration_audit_legacy_daily_intent.py  render_baseline_md.py  render_parity_md.py  smoke_boot.py  smoke_engine_live.py  validate_chartink_rule.py  validate_chartink_sell_rule.py  verify_semgrep_silent_notify.sh
services/: abandoned_exit_recovery_backfill.py  abandoned_exit_recovery_service.py  backtest_screener_filtered_service.py  backtest_service.py  bar_aggregator.py  basket_order_service.py  boot_convergence.py  boot_db_probe.py  broker_session_health.py  broker_session_state.py  cancel_all_order_service.py  cancel_gtt_order_service.py  cancel_order_service.py  close_position_service.py  custom_straddle_service.py  data_freshness_service.py  engine_eod_reconciliation_backfill.py  engine_eod_reconciliation_service.py  eod_watchdog_service.py  flow_executor_service.py  flow_scheduler_service.py  funds_service.py  futures_follow_service.py  gtt_orderbook_service.py  historify_scheduler_service.py  historify_service.py  holdings_service.py  indicators.py  iv_chart_service.py  journal_reflection_service.py  live_position_reconciliation_service.py  llm_review_client.py  market_calendar_service.py  market_regime_service.py  mode_service.py  modify_gtt_order_service.py  modify_order_service.py  multi_strike_oi_service.py  news_ingest_service.py  notification_service.py  (+63 more)
strategies/: STRATEGY_REGISTRY.md  __init__.py  base.py
test/: conftest.py  harness.py  iteration_test.py  ltp_example_test_1800 symbols.py  ltp_test_report.py  simple_depth_test.py  simple_ltp_test.py  test_abandoned_exit_recovery_service.py  test_action_center.py  test_auth_db_invalidate.py  test_backfill_job_id_propagation.py  test_backtest_db.py  test_backtest_engine.py  test_backtest_route.py  test_backtest_screener_filtered_service.py  test_bar_aggregator.py  test_basket_order_dispatch.py  test_boot_broker_session.py  test_boot_convergence.py  test_boot_db_probe.py  test_bot_web.py  test_bridge_server.py  test_broadcast_save.py  test_broker_session_auto_reconnect.py  test_broker_session_state.py  test_cache_performance.py  test_cancel_all_order_dispatch.py  test_cancel_gtt_order_dispatch.py  test_cancel_order_dispatch.py  test_chartink_rules_persistent_astral_2026_06_29.py  test_chartink_webhook_audit.py  test_chartink_webhook_sell_routing.py  test_close_position_dispatch.py  test_connection_manager_predicate.py  test_connection_pool.py  test_csrf.py  test_data_freshness_service.py  test_engine_eod_reconciliation_backfill.py  test_engine_journal_integration.py  test_engine_same_day_block.py  (+127 more)
upgrade/: migrate_gtt.py  (+6 more)
(+423 files in other folders)
