[project]
requires-python = ">=3.12"
name = "openalgoUI"
version = "2.0.1.1"
description = "Broker-agnostic open-source trading automation"
dependencies = [
  "aniso8601==9.0.1",
  "annotated-types==0.7.0",
  "anyio==4.13.0",
  "appnope==0.1.4",
  "APScheduler==3.11.2",
  "argon2-cffi==23.1.0",
  "argon2-cffi-bindings==21.2.0",
  "asttokens==3.0.1",
  "attrs==24.2.0",
  "bcrypt==5.0.0",
  "bidict==0.23.1",
  "blinker==1.9.0",
  "cachetools==7.0.5",
  "certifi==2024.7.4",
  "cffi==2.0.0",
  "charset-normalizer==3.4.7",
  "choreographer==1.2.1",
  "click==8.3.2",
  "colorama==0.4.6",
  "comm==0.2.3",
  "cryptography==46.0.7",
  "darkdetect==0.8.0",
  "debugpy==1.8.20",
  "decorator==5.2.1",
  "Deprecated==1.3.1",
  "dnspython==2.8.0",
  "duckdb==1.5.2",
  "email-validator==2.3.0",
  "executing==2.2.1",
  "fastjsonschema==2.21.2",
  "Flask==3.1.3",
  "Flask-Bcrypt==1.0.1",
  "Flask-Cors==6.0.2",
  "Flask-Limiter==4.1.1",
  "Flask-Login==0.6.3",
  "flask-restx==1.3.2",
  "Flask-SocketIO==5.6.1",
  "Flask-SQLAlchemy==3.1.1",
  "Flask-WTF==1.2.2",
  "greenlet==3.3.2",
  "h11==0.16.0",
  "h2==4.3.0",
  "hpack==4.1.0",
  "httpcore==1.0.9",
  "httpx[http2]==0.28.1",
  "httpx-sse==0.4.3",
  "hyperframe==6.1.0",
  "idna==3.11",
  "importlib-resources==6.5.2",
  "iniconfig==2.3.0",
  "ipykernel==6.29.5",
  "ipython==9.12.0",
  "ipython-pygments-lexers==1.1.1",
  "itsdangerous==2.2.0",
  "jedi==0.19.2",
  "Jinja2==3.1.6",
  "joserfc==1.6.4",
  "jsonschema==4.26.0",
  "jsonschema-specifications==2023.12.1",
  "jupyter-client==8.8.0",
  "jupyter-core==5.9.1",
  "kaleido==1.2.0",
  "limits==5.8.0",
  "logistro==2.0.1",
  "logzero==1.7.0",
  "markdown-it-py==4.0.0",
  "MarkupSafe==2.1.5",
  "marshmallow==3.26.2",
  "matplotlib-inline==0.2.1",
  "mcp==1.27.0",
  "mdurl==0.1.2",
  "narwhals==2.19.0",
  "nbformat==5.10.4",
  "nest-asyncio==1.6.0",
  "numpy==2.4.4",
  "openalgo==1.0.50",
  "ordered-set==4.1.0",
  "orjson==3.11.8",
  "packaging==24.1",
  "pandas==2.3.3",
  "pyarrow==23.0.1",
  "fastparquet==2025.12.0",
  "parso==0.8.6",
  "pexpect==4.9.0",
  "pillow>=12.2.0",
  "platformdirs==4.9.6",
  "plotly==6.6.0",
  "pluggy==1.6.0",
  "prompt-toolkit==3.0.52",
  "protobuf==6.33.5",
  "psutil==7.2.2",
  "ptyprocess==0.7.0",
  "pure-eval==0.2.3",
  "pycparser==2.22",
  "pydantic==2.12.5",
  "pydantic-core==2.41.5",
  "pydantic-settings==2.13.1",
  "Pygments==2.20.0",
  "PyJWT==2.12.1",
  "pyngrok==7.5.1",
  "pyotp==2.9.0",
  "pytest==9.0.3",
  "pytest-timeout==2.4.0",
  "python-dateutil==2.9.0.post0",
  "python-dotenv==1.2.2",
  "python-engineio==4.13.1",
  "python-multipart==0.0.27",
  "python-socketio==5.16.1",
  "python-telegram-bot==22.6",
  "wars==0.1.3",
  "pytz==2026.1.post1",
  "PyYAML==6.0.3",
  "pyzmq==27.1.0",
  "qrcode==8.2",
  "referencing==0.37.0",
  "requests==2.33.1",
  "rich==13.7.1",
  "rpds-py==0.30.0",
  "setuptools==80.10.1",
  "simple-websocket==1.1.0",
  "simplejson==3.20.2",
  "six==1.17.0",
  "sniffio==1.3.1",
  "SQLAlchemy==2.0.49",
  "sse-starlette==2.4.1",
  "stack-data==0.6.3",
  "starlette==0.52.1",
  "tornado==6.5.5",
  "traitlets==5.14.3",
  "typing-extensions>=4.12.2",
  "typing-inspection>=0.4.1",
  "tzdata==2025.3",
  "tzlocal==5.3.1",
  "urllib3==2.7.0",
  "uvicorn==0.44.0",
  "wcwidth==0.6.0",
  "websocket-client==1.9.0",
  "websockets==15.0.1",
  "Werkzeug==3.1.8",
  "wheel==0.46.3",
  "wrapt==1.16.0",
  "wsproto==1.3.2",
  "WTForms==3.2.1",
  "zipp==3.23.1",
  "zmq==0.0.0",
  "fastapi>=0.136.1",
  "opengreeks>=0.1.0",
  "pandas-ta-classic>=0.6.20",
  "feedparser>=6.0.12",
]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

# Ruff - Fast Python linter and formatter
[tool.ruff]
line-length = 100
target-version = "py312"
exclude = [
    ".venv",
    "frontend",
    "node_modules",
    "__pycache__",
    "*.pyc",
    "db",
    "log",
    "strategies",
    # --- Phase 1 additions (all zero-risk: generated / sample / untracked / dead) ---
    "examples",            # sample scripts, never shipped              (-84)
    "**/*_pb2.py",         # machine-generated protobuf                 (part of -50)
    "broker/*/protos",     # machine-generated protobuf package         (part of -50)
    "_*.py",               # untracked root scratch/diagnostic scripts  (-75)
    # Dead duplicates of the live services/telegram_bot_service.py.
    # Excluded from lint now; recommend DELETING in a follow-up commit
    # (committed but superseded — verify no import references first).
    "services/telegram_bot_service_fixed.py",   # (-43)
    "services/telegram_bot_service_v2.py",       # (-41)
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "F",      # pyflakes
    "W",      # pycodestyle warnings
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # function call in default argument
    "E402",   # module level import not at top of file
    "F401",   # imported but unused (sometimes intentional)
    # --- Phase 3: typing-modernization rules are stylistic only ---
    # Target is py312, so `list[x]` / `X | None` syntax is already available and
    # used in new code. These rules only flag *legacy* typing imports in older
    # modules; rewriting them is churn with no runtime benefit. Single-operator
    # project doesn't need typing-import style enforcement. (drops ~358)
    "UP035",  # deprecated typing import (e.g. typing.List -> list)
    "UP006",  # use of typing.List/Dict where builtin generics work
    "UP045",  # Optional[X] -> X | None
]

[tool.ruff.lint.isort]
known-first-party = ["broker", "blueprints", "database", "services", "utils", "restx_api", "extensions", "limiter", "cors", "csp"]

# This is not a distributable Python package — tell setuptools not to discover packages
[tool.setuptools]
packages = []

# Pytest configuration
[tool.pytest.ini_options]
testpaths = ["test"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
# Add the project root to sys.path so tests can do `from services.foo import bar`
# without pytest having to rely on the legacy "prepend rootdir" import mode
# (which Python 3.14 / newer pytest no longer applies the same way).
pythonpath = ["."]
addopts = "-v --timeout=60 --import-mode=importlib"
asyncio_mode = "auto"
# Test markers (codified per 2026-06-11 retrospective plan item #3). Defining
# them here makes `pytest -m unit` actually collect (and silences
# PytestUnknownMarkWarning). `unit` = fast, deterministic, no DB/network/broker;
# `integration` = touches DB/services/multiple modules; `live` = requires a
# running OpenAlgo / broker session (never run in CI).
markers = [
    "unit: fast deterministic test, no DB/network/broker (safe for `pytest -m unit`)",
    "integration: touches DB, services, or multiple modules together",
    "live: requires a running OpenAlgo instance or live broker session",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[dependency-groups]
dev = [
    "bandit[sarif]>=1.9.3",
    "detect-secrets>=1.5.0",
    "pip-audit>=2.10.0",
    # Pulled in transitively via pip-api -> pip-audit; pinned here to satisfy
    # Dependabot's >=26.1 advisory on the lockfile.
    "pip>=26.1",
    "pytest-asyncio>=1.4.0",
    "pytest-timeout>=2.4.0",
    "ruff>=0.14.14",
]
